fix modal overflow issue and introduce the modal layout

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -168,6 +168,10 @@
     display: none;
   }
 
+  body.modal-open {
+    @apply overflow-hidden;
+  }
+
   trix-editor {
     max-height: 320px !important;
     overflow-y: auto;
